add set-password endpoint, change auth logic
