# shop-list.swagger.yaml
@@ -494,6 +494,45 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /auth/set-password:
+    put:
+      tags:
+        - auth
+      summary: Set or update user password
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                password:
+                  type: string
+                  example: "P@$$word1"
+              required:
+                - password
+      responses:
+        '200':
+          description: Password updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /auth/change-password:
     post:
       tags:
