# src/models/user.model.ts
@@ -8,7 +8,7 @@ const userSchema = new Schema(
   {
     name: { type: String, required: true },
     email: { type: String, required: true, unique: true },
-    password: { type: String, required: true },
+    password: { type: String, select: false },
     phone: { type: String, required: false },
     isVerified: { type: Boolean, required: true, default: false },
     isGoogleAuth: { type: Boolean, required: true, default: false },
