# src/validators/user.validator.ts
@@ -28,6 +28,10 @@ export class UserValidator {
     password: this.password.required(),
   });
 
+  public static setPassword = joi.object({
+    password: this.password.required(),
+  });
+
   public static changePassword = joi.object({
     oldPassword: this.password.required(),
     newPassword: this.password.required(),
